# lab5cp2025-ZGVSKY

./: CMakeLists.txt  main.cpp
op_lab_5/: Lab5_Math.cpp  lab5.h  lab5_entry.cpp
